gccida/c0/expand_inline_function
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1126:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1127:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1140:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode arriving_mode; // [rsp+7Ch] [rbp-164h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1144:4: error: expected ';' after expression
rtx note_0; // [rsp+90h] [rbp-150h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1144:5: error: use of undeclared identifier 'note_0'
rtx note_0; // [rsp+90h] [rbp-150h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1151:4: error: expected ';' after expression
rtx copy; // [rsp+C8h] [rbp-118h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1151:5: error: use of undeclared identifier 'copy'; did you mean 'bcopy'?
rtx copy; // [rsp+C8h] [rbp-118h] 
    ^~~~
    bcopy
/usr/include/strings.h:38:13: note: 'bcopy' declared here
extern void bcopy (const void *__src, void *__dest, size_t __n)
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1152:4: error: expected ';' after expression
rtx note; // [rsp+D0h] [rbp-110h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1152:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+D0h] [rbp-110h] 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1153:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pmode; // [rsp+D8h] [rbp-108h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1155:4: error: expected ';' after expression
rtx stack_slot; // [rsp+E0h] [rbp-100h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1155:5: error: use of undeclared identifier 'stack_slot'
rtx stack_slot; // [rsp+E0h] [rbp-100h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1157:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+ECh] [rbp-F4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1159:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+FCh] [rbp-E4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1161:6: error: use of undeclared identifier 'real_label_map'
rtx *real_label_map; // [rsp+108h] [rbp-D8h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1164:4: error: expected ';' after expression
rtx static_chain_value; // [rsp+118h] [rbp-C8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1164:5: error: use of undeclared identifier 'static_chain_value'; did you mean 'static_chain_rtx'?
rtx static_chain_value; // [rsp+118h] [rbp-C8h] 
    ^~~~~~~~~~~~~~~~~~
    static_chain_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/rtl.h:1635:12: note: 'static_chain_rtx' declared here
extern rtx static_chain_rtx;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1167:4: error: expected ';' after expression
rtx temp; // [rsp+130h] [rbp-B0h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/integrate.c:1167:5: error: use of undeclared identifier 'temp'
rtx temp; // [rsp+130h] [rbp-B0h] BYREF 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_inline_function/src/obj/integrate.o] Error 1
